Draft new IR tree & IRBuilder.